--- a/src/quillc/CMakeLists.txt
+++ b/src/quillc/CMakeLists.txt
@@ -1,2 +1,8 @@
-add_executable(quillc main.cpp)
+set(SOURCES
+    main.cpp
+)
+set(HEADERS
+)
+
+add_executable(quillc ${SOURCES} ${HEADERS})
 target_link_libraries(quillc Parser ${llvm_libs})
