Begin parsing declarations into AST.

--- a/src/Parser/CMakeLists.txt
+++ b/src/Parser/CMakeLists.txt
@@ -1,11 +1,13 @@
 set(SOURCES
+    Parser.cpp
     Lexer.cpp
 )
 set(HEADERS
+    Parser.hpp
     Lexer.hpp
     Token.hpp
     TokenKinds.def
 )
 
 add_library(Parser ${SOURCES} ${HEADERS})
-target_link_libraries(Parser ${llvm_libs} ${icu_libs})
+target_link_libraries(Parser AST ${llvm_libs} ${icu_libs})
