Mega-commit mostly concerning the AST and parsing tokens into it.

--- a/src/AST/CMakeLists.txt
+++ b/src/AST/CMakeLists.txt
@@ -1,8 +1,12 @@
 set(SOURCES
     AST.cpp
+    Decl.cpp
+    Expr.cpp
 )
 set(HEADERS
     AST.hpp
+    Decl.hpp
+    Expr.hpp
 )
 
 add_library(AST ${SOURCES} ${HEADERS})
