Add ScopeNode ASTNode for representing a collection of abstract ASTNodes.

--- a/src/AST/CMakeLists.txt
+++ b/src/AST/CMakeLists.txt
@@ -2,11 +2,13 @@ set(SOURCES
     AST.cpp
     Decl.cpp
     Expr.cpp
+    Stmt.cpp
 )
 set(HEADERS
     AST.hpp
     Decl.hpp
     Expr.hpp
+    Stmt.hpp
 )
 
 add_library(AST ${SOURCES} ${HEADERS})
