Add eof token, delete Parser in preparation for plans to switch to an SR parsing algorithm.

--- a/src/Parser/CMakeLists.txt
+++ b/src/Parser/CMakeLists.txt
@@ -1,11 +1,10 @@
 set(SOURCES
-    Parser.cpp
     Lexer.cpp
 )
 set(HEADERS
-    Parser.hpp
     Lexer.hpp
     Token.hpp
+    ParseTree.hpp
     TokenKinds.def
     ParseResult.hpp
 )
