Replace ASTNode::prettyPrint with ASTVisitor<> and ASTPrinter classes.

--- a/src/AST/CMakeLists.txt
+++ b/src/AST/CMakeLists.txt
@@ -1,14 +1,14 @@
 set(SOURCES
-    AST.cpp
-    Decl.cpp
-    Expr.cpp
-    Stmt.cpp
+    ASTPrinter.cpp
 )
 set(HEADERS
     AST.hpp
     Decl.hpp
     Expr.hpp
     Stmt.hpp
+    ASTVisitor.hpp
+    ASTNodes.def
+    ASTPrinter.hpp
 )
 
 add_library(AST ${SOURCES} ${HEADERS})
