--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,5 @@ add_subdirectory(quillc)
 add_subdirectory(Parser)
 add_subdirectory(AST)
 add_subdirectory(General)
+add_subdirectory(Sema)
+add_subdirectory(IRGen)
