llvm::SmallVector<> to std::vector<>.

--- a/src/AST/CMakeLists.txt
+++ b/src/AST/CMakeLists.txt
@@ -9,6 +9,7 @@ set(HEADERS
     ASTVisitor.hpp
     ASTNodes.def
     ASTPrinter.hpp
+    BuiltinTypes.def
 )
 
 add_library(AST ${SOURCES} ${HEADERS})
