--- a/src/Sema/CMakeLists.txt
+++ b/src/Sema/CMakeLists.txt
@@ -3,5 +3,5 @@ set(SOURCES
 set(HEADERS
 )
 
-add_library(Sema ${SOURCES} ${HEADERS})
-target_link_libraries(Sema AST ${llvm_libs} ${icu_libs})
+#add_library(Sema ${SOURCES} ${HEADERS})
+#target_link_libraries(Sema AST ${llvm_libs} ${icu_libs})
