Make type references their own thing rather than Exprs, for now.
This is done for simplicity.

--- a/src/AST/CMakeLists.txt
+++ b/src/AST/CMakeLists.txt
@@ -6,10 +6,12 @@ set(HEADERS
     Decl.hpp
     Expr.hpp
     Stmt.hpp
+    Types.hpp
     ASTVisitor.hpp
     ASTNodes.def
     ASTPrinter.hpp
     BuiltinTypes.def
+    Types.hpp
 )
 
 add_library(AST ${SOURCES} ${HEADERS})
