Add basic type-checker.

--- a/src/Sema/CMakeLists.txt
+++ b/src/Sema/CMakeLists.txt
@@ -2,8 +2,8 @@ set(SOURCES
     TypeChecker.cpp
 )
 set(HEADERS
-    TypeChecker.hpp
+    TypeChecker.h
 )
 
-#add_library(Sema ${SOURCES} ${HEADERS})
-#target_link_libraries(Sema AST ${llvm_libs} ${icu_libs})
+add_library(Sema ${SOURCES} ${HEADERS})
+target_link_libraries(Sema AST General ${llvm_libs} ${icu_libs})
