Ditch BuiltinTypes, use boost::variant to model types.
This will make it easier to implement a Hindley-Milner style typechecker.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.4.3)
 project(quill-lang)
 
 find_package(LLVM REQUIRED CONFIG)
+find_package(Boost 1.66 COMPONENTS program_options REQUIRED)
 
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
@@ -13,7 +14,7 @@ message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z")
 
-include_directories(src ${LLVM_INCLUDE_DIRS})
+include_directories(src ${LLVM_INCLUDE_DIRS} ${BOOST_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
 # Find the libraries that correspond to the LLVM components
