Stub out a constraint generator.

--- a/src/Sema/CMakeLists.txt
+++ b/src/Sema/CMakeLists.txt
@@ -1,8 +1,10 @@
 set(SOURCES
     TypeChecker.cpp
+    ConstraintGenerator.cpp
 )
 set(HEADERS
     TypeChecker.h
+    ConstraintGenerator.h
 )
 
 add_library(Sema ${SOURCES} ${HEADERS})
