Stub out some constraint solving functions.

--- a/src/Sema/CMakeLists.txt
+++ b/src/Sema/CMakeLists.txt
@@ -1,11 +1,14 @@
 set(SOURCES
     TypeChecker.cpp
     ConstraintGenerator.cpp
+    ConstraintSolver.cpp
+    Constraint.cpp
 )
 set(HEADERS
     TypeChecker.h
     ConstraintGenerator.h
     Constraint.h
+    ConstraintSolver.h
 )
 
 add_library(Sema ${SOURCES} ${HEADERS})
