Vastly simplify constraint generation; add temporary new name resolution pass preceding the type checker.

--- a/src/Sema/CMakeLists.txt
+++ b/src/Sema/CMakeLists.txt
@@ -1,11 +1,11 @@
 set(SOURCES
-    TypeChecker.cpp
+    NameResolver.cpp
     ConstraintGenerator.cpp
     ConstraintSolver.cpp
     Constraint.cpp
 )
 set(HEADERS
-    TypeChecker.h
+    NameResolver.h
     ConstraintGenerator.h
     Constraint.h
     ConstraintSolver.h
