--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,18 +2,14 @@ cmake_minimum_required(VERSION 3.4.3)
 project(meda-lang)
 
 find_package(LLVM REQUIRED CONFIG)
+set(PATTERNS_INCLUDE_DIRS dependencies/patterns/include)
 
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 
-# Set your project compile flags.
-# E.g. if using the C++ header files
-# you will need to enable C++11 support
-# for your compiler.
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
-include_directories(src ${LLVM_INCLUDE_DIRS})
+include_directories(src ${LLVM_INCLUDE_DIRS} ${PATTERNS_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
 # Find the libraries that correspond to the LLVM components
