Remove unecessary inter-header dependencies, remove Argument, remove unnecessary indirection in Type.

--- a/src/AST/CMakeLists.txt
+++ b/src/AST/CMakeLists.txt
@@ -1,14 +1,16 @@
 set(SOURCES
-    AST.cpp
     ASTPrinter.cpp
-    Types.cpp
+    Type.cpp
     Decl.cpp
+    Expr.cpp
+    Stmt.cpp
 )
 set(HEADERS
     AST.h
     Decl.h
     Expr.h
     Stmt.h
+    Type.h
     ASTVisitor.h
     ASTNodes.def
     ASTPrinter.h
