Overhaul SourceRange, SourceLoc. Add a StringRef type for unowned strings.

--- a/src/General/CMakeLists.txt
+++ b/src/General/CMakeLists.txt
@@ -1,9 +1,10 @@
 set(SOURCES
-    SourceLoc.cpp
+    SourceInfo.cpp
 )
 set(HEADERS
-    SourceLoc.h
+    SourceInfo.h
+    String.h
 )
 
 add_library(General ${SOURCES} ${HEADERS})
-target_link_libraries(General Parser AST ${llvm_libs} ${icu_libs})
+target_link_libraries(General Parser AST ${llvm_libs})
