--- a/src/Sema/CMakeLists.txt
+++ b/src/Sema/CMakeLists.txt
@@ -6,4 +6,4 @@ set(HEADERS
 )
 
 add_library(Sema ${SOURCES} ${HEADERS})
-target_link_libraries(Sema AST General ${llvm_libs} ${icu_libs})
+target_link_libraries(Sema AST General ${llvm_libs})
