Add a new diagnostic system that produces drastically error messages; adopt it in part of the lexer.

--- a/src/General/CMakeLists.txt
+++ b/src/General/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(SOURCES
     SourceInfo.cpp
+    Diagnostics.cpp
 )
 set(HEADERS
     SourceInfo.h
     String.h
+    Diagnostics.h
 )
 
 add_library(General ${SOURCES} ${HEADERS})
