Move LLVM code from main into LLVMGenerator (also renamed from CodeGenerator). Also add an LIR module.

--- a/src/AST/CMakeLists.txt
+++ b/src/AST/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCES
     Decl.cpp
     Expr.cpp
     Stmt.cpp
+    Ident.cpp
 )
 set(HEADERS
     AST.h
@@ -14,6 +15,7 @@ set(HEADERS
     ASTVisitor.h
     ASTNodes.def
     ASTPrinter.h
+    Ident.h
 )
 
 add_library(AST ${SOURCES} ${HEADERS})
