--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,5 @@ add_subdirectory(Parser)
 add_subdirectory(AST)
 add_subdirectory(General)
 add_subdirectory(Sema)
-add_subdirectory(IRGen)
+add_subdirectory(LLVMGen)
+add_subdirectory(LIR)
