Wrestle with C++ templates all day, end up with some nifty Swift-esque reverse and zip iterators

--- a/src/General/CMakeLists.txt
+++ b/src/General/CMakeLists.txt
@@ -2,11 +2,13 @@ set(SOURCES
     SourceInfo.cpp
     Diagnostics.cpp
     String.cpp
+    Array.cpp
 )
 set(HEADERS
     SourceInfo.h
     String.h
     Diagnostics.h
+    Array.h
 )
 
 add_library(General ${SOURCES} ${HEADERS})
