Stub out LIR and LIRGenerator.

--- a/src/LIR/CMakeLists.txt
+++ b/src/LIR/CMakeLists.txt
@@ -1,8 +1,10 @@
 set(SOURCES
     LIR.cpp
+    LIRGenerator.cpp
 )
 set(HEADERS
     LIR.h
+    LIRGenerator.h
 )
 
 add_library(LIR ${SOURCES} ${HEADERS})
