--- a/src/medac/CMakeLists.txt
+++ b/src/medac/CMakeLists.txt
@@ -5,4 +5,4 @@ set(HEADERS
 )
 
 add_executable(medac ${SOURCES} ${HEADERS})
-target_link_libraries(medac Parser AST LLVMGen Sema ${llvm_libs})
+target_link_libraries(medac Parser AST LLVMGen Sema LIR ${llvm_libs})
