--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ llvm_map_components_to_libnames(llvm_libs support core irreader all)
 add_subdirectory(src)
 
 add_custom_target(run
-    COMMAND medac
-    DEPENDS medac
+    COMMAND meda
+    DEPENDS meda
     WORKING_DIRECTORY ${CMAKE_PROJECT_DIR}
 )
