Delete a lot of stuff, also add some nice new small buffer optimized array implementations. Get rid of all remaining dependence on std::string as well.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,21 @@
-add_subdirectory(medac)
-add_subdirectory(Parser)
-add_subdirectory(AST)
-add_subdirectory(General)
-add_subdirectory(Sema)
-add_subdirectory(LLVMGen)
-add_subdirectory(LIR)
+set(SOURCES
+    main.cpp
+    Diagnostics.cpp
+    Lexer.cpp
+    main.cpp
+    SourceInfo.cpp
+    String.cpp
+)
+set(HEADERS
+    Array.h
+    Diagnostics.h
+    Lexer.h
+    Misc.h
+    SourceInfo.h
+    String.h
+    Token.h
+    TokenKinds.h
+)
+
+add_executable(meda ${SOURCES} ${HEADERS})
+target_link_libraries(meda ${llvm_libs})
