--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # Rust stuff
-**/target/*
-
-# CMake stuff
-build/*
+target/*
 
 # General macOS stuff
 .DS_Store
@@ -11,7 +8,6 @@ build/*
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
