--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2018"
 
 [profile.release]
 debug = true
-#lto = true
 
 [dependencies]
-#unicode-segmentation = "1.3.0"
 unicode-segmentation = { git = "https://github.com/unicode-rs/unicode-segmentation" }
+string-interner = "0.7.0"
