smallvec all the things

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ lto = true
 [dependencies]
 unicode-segmentation = { git = "https://github.com/unicode-rs/unicode-segmentation" }
 string-interner = "0.7.0"
+smallvec = "0.6.10"
