Begin writing an interpreter

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ lto = true
 unicode-segmentation = { git = "https://github.com/unicode-rs/unicode-segmentation" }
 string-interner = "0.7.0"
 smallvec = "0.6.10"
-crossbeam-utils = "0.6"
+arrayvec = "0.4.11"
+crossbeam-utils = "0.6.6"
