--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ lto = true
 [dependencies]
 unicode-segmentation = { git = "https://github.com/unicode-rs/unicode-segmentation" }
 string-interner = "0.7.0"
+bitflags = "1.1.0"
 smallvec = "0.6.10"
 arrayvec = "0.4.11"
 crossbeam-utils = "0.6.6"
