--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,9 @@
                     "kind": "bin"
                 }
             },
-            "args": [],
+            "args": [
+                "HelloWorld.meda"
+            ],
             "cwd": "${workspaceFolder}"
         },
         {
