--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,14 @@ lto = true
 [dependencies]
 serde = "1.0.103"
 unicode-segmentation = { git = "https://github.com/unicode-rs/unicode-segmentation" }
-string-interner = "0.7.0"
+string-interner = "0.12.1"
 bitflags = "1.1.0"
-smallvec = "0.6.10"
+smallvec = "1.5.1"
 arrayvec = "0.4.11"
 crossbeam-utils = "0.6.6"
 webbrowser = "0.5.2"
 clap = "3.0.0-beta.1"
 paste = "1.0.0"
 num-bigint = "0.3"
+index_vec = "0.1.2"
 mire = { path = "../mire/" }
