--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ paste = "1.0.0"
 num-bigint = "0.3"
 index_vec = "0.1.2"
 mire = { path = "../mire/" }
+display_adapter = { path = "../display_adapter/display_adapter" }
