--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,6 @@ clap = "3.0.0-beta.1"
 paste = "1.0.0"
 num-bigint = "0.3"
 index_vec = "0.1.2"
+indenter = "0.3.2"
 mire = { path = "../mire/" }
 display_adapter = { path = "../display_adapter/display_adapter" }
