--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
                 }
             },
             "args": [
-                "HelloWorld.meda"
+                "refine-test.meda"
             ],
             "cwd": "${workspaceFolder}"
         },
