--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,6 @@ paste = "1.0.0"
 num-bigint = "0.3"
 index_vec = "0.1.2"
 indenter = "0.3.2"
-rsmt2 = { git = "https://github.com/zachwolfe/rsmt2.git" }
+rsmt2 = { path = "../rsmt2" }
 mire = { path = "../mire/" }
 display_adapter = { path = "../display_adapter/display_adapter" }
