Parse enum declarations

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
                 }
             },
             "args": [
-                "generics.dusk"
+                "enums.dusk"
             ],
             "cwd": "${workspaceFolder}"
         },
