Don't ask poor Node to parse an EXE as JavaScript

--- a/dls-client/package.json
+++ b/dls-client/package.json
@@ -23,8 +23,13 @@
         "languages": [
             {
                 "id": "dusk",
-                "aliases": ["Dusk", "dusk"],
-                "extensions": [".dusk"]
+                "aliases": [
+                    "Dusk",
+                    "dusk"
+                ],
+                "extensions": [
+                    ".dusk"
+                ]
             }
         ]
     },
