--- a/dls/Cargo.toml
+++ b/dls/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lspower = "1.5.0"
+tokio = { version = "1.17.0", features = ["full"] }
