--- a/dls/Cargo.toml
+++ b/dls/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 lspower = "1.5.0"
 tokio = { version = "1.17.0", features = ["full"] }
+libdusk = { path = "../libdusk" }
+dire = { path = "../../dire" }
