Fix problem where DLS would randomly stop working
It turns out I was calling the Driver's flush_errors() method from
within the typechecker, which was causing the errors to be printed to
stdout and interpreted by the client as nonsense LSP requests. This
presumably also prevented future legitimate requests from being
correctly interpreted.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -46,7 +46,7 @@
         {
             "type": "extensionHost",
             "request": "launch",
-            "name": "Launch DLS client",
+            "name": "Launch DLS",
             "runtimeExecutable": "${execPath}",
             "args": [
                 "--extensionDevelopmentPath=${workspaceRoot}/dls-client"
