--- a/dls/Cargo.toml
+++ b/dls/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 lspower = "1.5.0"
 tokio = { version = "1.17.0", features = ["full"] }
 libdusk = { path = "../libdusk" }
-dire = { path = "../../dire" }
+dire = { path = "../dire" }
