--- a/dusk/Cargo.toml
+++ b/dusk/Cargo.toml
@@ -18,7 +18,7 @@ num-bigint = "0.3"
 index_vec = "0.1.2"
 indenter = "0.3.2"
 rsmt2 = "0.11.0"
-dire = { path = "../../dire/" }
+dire = { path = "../dire/" }
 display_adapter = { path = "../../display_adapter/display_adapter" }
 dusk-proc-macros = { path = "../dusk-proc-macros" }
 libdusk = { path = "../libdusk" }
