Call GetStdHandle correctly (I think)

--- a/libdusk/Cargo.toml
+++ b/libdusk/Cargo.toml
@@ -18,6 +18,7 @@ index_vec = "0.1.2"
 indenter = "0.3.2"
 rsmt2 = "0.11.0"
 region = "3.0"
+kernel32-sys = "0.2.2"
 display_adapter = { path = "../../display_adapter/display_adapter" }
 dire = { path = "../dire/" }
 dusk-proc-macros = { path = "../dusk-proc-macros" }
