Handle more parameter and return types in extern calls

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
                 }
             },
             "args": [
-                "enums.dusk"
+                "extern_mod.dusk"
             ],
             "cwd": "${workspaceFolder}"
         },
