--- a/libdusk/Cargo.toml
+++ b/libdusk/Cargo.toml
@@ -22,3 +22,5 @@ kernel32-sys = "0.2.2"
 display_adapter = { path = "../../display_adapter/display_adapter" }
 dire = { path = "../dire/" }
 dusk-proc-macros = { path = "../dusk-proc-macros" }
+lazy_static = "1.4.0"
+interprocess = "1.1.1"
