Change default debug input file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,9 +20,8 @@
                 }
             },
             "args": [
-                "main.dusk"
-            ],
-            "cwd": "${workspaceFolder}/../prettyboy/"
+                "open_a_window.dusk"
+            ]
         },
         {
             "type": "lldb",
