--- a/libdusk/Cargo.toml
+++ b/libdusk/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Zach <zachrwolfe@me.com>"]
 edition = "2021"
 
 [dependencies]
-unicode-segmentation = { git = "https://github.com/unicode-rs/unicode-segmentation" }
+unicode-segmentation = "1.9"
 string-interner = "0.12.1"
 bitflags = "1.2.1"
 smallvec = { version = "1.6.1", features = ["const_generics"] }
@@ -16,7 +16,6 @@ paste = "1.0.0"
 num-bigint = "0.3"
 index_vec = "0.1.3"
 indenter = "0.3.2"
-rsmt2 = "0.11.0"
 region = "3.0"
 kernel32-sys = "0.2.2"
 display_adapter = { path = "../../display_adapter/display_adapter" }
