--- a/dls/Cargo.toml
+++ b/dls/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lspower = "1.5.0"
-tokio = { version = "1.17.0", features = ["full"] }
 libdusk = { path = "../libdusk" }
 dire = { path = "../dire" }
+lsp-server = "0.6"
+lsp-types = "0.93"
+serde_json = "1.0"
+serde = "1.0"
