--- a/libdusk/Cargo.toml
+++ b/libdusk/Cargo.toml
@@ -28,7 +28,7 @@ interprocess = "1.1.1"
 lsp-types = "0.93"
 
 [target.'cfg(windows)'.dependencies]
-kernel32-sys = "0.2.2"
+winapi = { version = "0.3.9", features = ["libloaderapi"] }
 
 [target.'cfg(not(windows))'.dependencies]
 libc = "0.2"
