Add homepage to all the things

--- a/dusk-proc-macros/Cargo.toml
+++ b/dusk-proc-macros/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "dusk-proc-macros"
-version = "0.1.0"
+version = "0.1.2"
 edition = "2021"
 description = "A collection of procedural macros for use by the Dusk programming language compiler"
 license = "MIT"
 repository = "https://github.com/dusklang/dusk"
+homepage = "https://dusklang.org/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
