--- a/dire/Cargo.toml
+++ b/dire/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "dusk_dire"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Zach Wolfe <zachrwolfe@me.com>"]
 edition = "2021"
 description = "A work-in-progress intermediate representation library, designed primarily for use in the Dusk programming language"
 license = "MIT"
 repository = "https://github.com/dusklang/dusk"
+homepage = "https://dusklang.org/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
