--- a/libdusk/Cargo.toml
+++ b/libdusk/Cargo.toml
@@ -24,8 +24,8 @@ region = "3.0"
 display_adapter = { version = "0.1", path = "../../display_adapter/display_adapter" }
 dusk_dire = { version = "0.1", path = "../dire" }
 dusk-proc-macros = { version = "0.1", path = "../dusk-proc-macros" }
+dvd_ipc = { version = "0.1", path = "../dvd_ipc" }
 lazy_static = "1.4.0"
-interprocess = "1.1.1"
 lsp-types = "0.93"
 
 [target.'cfg(windows)'.dependencies]
