Implement message passing protocol between libdusk and DVD

--- a/dire/Cargo.toml
+++ b/dire/Cargo.toml
@@ -11,8 +11,9 @@ homepage = "https://dusklang.org/"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-index_vec = "0.1.2"
+index_vec = { version = "0.1.2", features = ["serde"] }
 smallvec = "1.5.1"
 string-interner = "0.12.1"
 display_adapter = { version = "0.1", path = "../../display_adapter/display_adapter" }
 num-bigint = "0.3"
+serde = "1.0"
