--- a/dvd/Cargo.toml
+++ b/dvd/Cargo.toml
@@ -10,4 +10,7 @@ glium = { version = "0.30.2", default-features = true }
 imgui = {version = "0.8.2", features = ["tables-api"]}
 imgui-glium-renderer = "0.8.2"
 imgui-winit-support = "0.8.2"
+interprocess = "1.1.1"
 rand = "0.8"
+
+dvd_ipc = { path = "../dvd_ipc" }
