--- a/libdusk/Cargo.toml
+++ b/libdusk/Cargo.toml
@@ -18,7 +18,7 @@ webbrowser = "0.5.2"
 clap = { version = "3.0", features = ["derive"] }
 paste = "1.0.0"
 num-bigint = "0.3"
-index_vec = "0.1.3"
+index_vec = { version = "0.1.2", features = ["serde"] }
 indenter = "0.3.2"
 region = "3.0"
 display_adapter = { version = "0.1", path = "../../display_adapter/display_adapter" }
@@ -27,6 +27,7 @@ dusk-proc-macros = { version = "0.1", path = "../dusk-proc-macros" }
 dvd_ipc = { version = "0.1", path = "../dvd_ipc" }
 lazy_static = "1.4.0"
 lsp-types = "0.93"
+serde = "1.0"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["libloaderapi"] }
