--- a/dls/Cargo.toml
+++ b/dls/Cargo.toml
@@ -7,7 +7,7 @@ homepage = "https://dusklang.org/"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libdusk = { version = "0.1", path = "../libdusk" }
+libdusk = { version = "0.1", path = "../libdusk", features = ["dls"] }
 dusk_dire = { version = "0.1", path = "../dire" }
 dusk-proc-macros = { version = "0.1", path = "../dusk-proc-macros" }
 lsp-server = "0.6"
