--- a/dvd_ipc/Cargo.toml
+++ b/dvd_ipc/Cargo.toml
@@ -11,9 +11,12 @@ homepage = "https://dusklang.org/"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-interprocess = "1.1.1"
-lazy_static = "1.4.0"
-serde_json = "1.0"
-serde = "1.0"
+interprocess = { version = "1.1.1", optional = true }
+lazy_static = { version = "1.4.0", optional = true }
+serde = { version = "1.0", features = ["derive"], optional = true }
+serde_json = { version = "1.0", optional = true }
 
 dusk_dire = { version = "0.1", path = "../dire" }
+
+[features]
+enabled = ["dep:interprocess", "dep:lazy_static", "dep:serde", "dep:serde_json", "dusk_dire/serde"]
