--- a/libdusk/Cargo.toml
+++ b/libdusk/Cargo.toml
@@ -24,6 +24,7 @@ display_adapter = { version = "0.1", path = "../../display_adapter/display_adapt
 dusk_dire = { version = "0.1", path = "../dire" }
 dusk-proc-macros = { version = "0.1", path = "../dusk-proc-macros" }
 lazy_static = "1.4.0"
+derivative = "2.2"
 
 # LSP-related dependencies
 lsp-types = { version = "0.93", optional = true }
