--- a/dusk/Cargo.toml
+++ b/dusk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dusklang"
-version = "0.1.5"
+version = "0.1.6"
 authors = ["Zach <zachrwolfe@me.com>"]
 edition = "2021"
 default-run = "dusk"
@@ -8,6 +8,7 @@ description = "This crate contains a compiler for the Dusk programming language"
 license = "MIT"
 repository = "https://github.com/dusklang/dusk"
 homepage = "https://dusklang.org/"
+readme = "../README.md"
 
 [dependencies]
 clap = { version = "3.0", features = ["derive"] }
