--- a/dusk/Cargo.toml
+++ b/dusk/Cargo.toml
@@ -22,10 +22,11 @@ rand = { version = "0.8", optional = true }
 imgui-winit-support = { version = "0.8.2", optional = true }
 interprocess = { version = "1.1.1", optional = true }
 imgui-glium-renderer = { version = "0.8.2", optional = true }
+rect_packer = { version = "0.2.1", optional = true }
 
 [features]
 # Enables the Dusk visual debugger
-dvd = ["libdusk/dvd", "dep:glium", "dep:imgui", "dep:rand", "dep:imgui-winit-support", "dep:interprocess", "dep:imgui-glium-renderer"]
+dvd = ["libdusk/dvd", "dep:glium", "dep:imgui", "dep:rand", "dep:imgui-winit-support", "dep:interprocess", "dep:imgui-glium-renderer", "dep:rect_packer"]
 
 [[bin]]
 path = "src/main.rs"
